# ChangeLog for app-vim/gundo
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-vim/gundo/ChangeLog,v 1.5 2011/06/29 00:53:06 radhermit Exp $

*gundo-2.2.1 (29 Jun 2011)

  29 Jun 2011; Tim Harder <radhermit@gentoo.org> +gundo-2.2.1.ebuild:
  Version bump. Use github mirrored tarball.

*gundo-2.2.0 (30 May 2011)

  30 May 2011; Tim Harder <radhermit@gentoo.org> -gundo-2.1.1.ebuild,
  +gundo-2.2.0.ebuild:
  Version bump and remove old.

*gundo-2.1.1 (14 Mar 2011)

  14 Mar 2011; Tim Harder <radhermit@gentoo.org> -gundo-2.1.0.ebuild,
  +gundo-2.1.1.ebuild:
  Version bump and remove old.

*gundo-2.1.0 (11 Mar 2011)

  11 Mar 2011; Tim Harder <radhermit@gentoo.org> -gundo-2.0.0.ebuild,
  +gundo-2.1.0.ebuild:
  Version bump and remove old.

*gundo-2.0.0 (22 Nov 2010)

  22 Nov 2010; Tim Harder <radhermit@gentoo.org> +gundo-2.0.0.ebuild:
  Initial import.
