@@ -1,6 +1,11 @@
 # ChangeLog for app-vim/gundo
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-vim/gundo/ChangeLog,v 1.5 2011/06/29 00:53:06 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-vim/gundo/ChangeLog,v 1.6 2011/07/30 20:16:14 radhermit Exp $
+
+*gundo-2.2.2 (30 Jul 2011)
+
+  30 Jul 2011; Tim Harder <radhermit@gentoo.org> +gundo-2.2.2.ebuild:
+  Version bump.
 
 *gundo-2.2.1 (29 Jun 2011)
 
